--- a/20-ping-single-page/style.css
+++ b/20-ping-single-page/style.css
@@ -64,7 +64,7 @@ main {
   font-weight: 300;
 }
 
-.action__container {
+.hero__form {
   position: relative;
 }
 
@@ -83,7 +83,19 @@ main {
   font-size: 1.2rem;
   font-weight: 300;
 }
+.hero__input:active {
+  border: 1px solid var(--pale-blue);
+  outline: 1px solid var(--pale-blue);
+}
+.hero__input:focus {
+  border:1px solid var(--pale-blue);
+  outline: 1px solid var(--pale-blue);
+}
 
+.hero__input:focus:invalid {
+  border:1px solid red;
+  outline: 1px solid red;
+}
 .input__error {
   font-size: 1rem;
   font-style: italic;
@@ -91,7 +103,7 @@ main {
   color:var(--light-red);
   margin-top:-7px;
   margin-bottom:1rem;
-  /* visibility: hidden; */
+  visibility: hidden;
   position: absolute;
   bottom: 76px;
   left: 190px;
@@ -160,7 +172,10 @@ main {
 }
 
 @media (min-width: 790px) {
-  .action__container {
+  .hero__heading {
+    margin-top:7rem;
+  }
+  .hero__form {
     display:flex;
     align-items: baseline;
     justify-content: center;
@@ -187,6 +202,16 @@ main {
   .input__error {
     bottom: 7px;
     left: 33px;
+  }
+
+  .hero__img {
+    margin-top:5rem;
+  }
+  .hero__footer {
+    margin-top:5rem;
+  }
+  .footer__list {
+    margin-bottom:3rem;
   }
   .footer__text {
     font-size: 1.2rem;
