--- a/20-ping-single-page/style.css
+++ b/20-ping-single-page/style.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300;600;700&display=swap');
 
 :root {
-  --blue: hsl(223, 87%, 63%);
+  --blue: #376CF1;
 
   --pale-blue: hsl(223, 100%, 88%);
   --light-red: hsl(354, 100%, 66%);
 
-  --gray: hsl(0, 0%, 59%);
+  --gray: #737373;
   --very-dark-blue: hsl(209, 33%, 12%);
 }
 * {
