--- a/21-huddle-landing/style.css
+++ b/21-huddle-landing/style.css
@@ -24,7 +24,80 @@ body {
 }
 
 img {
-  display:block;
+  display: block;
   max-width: 100%;
-  height:auto;
+  height: auto;
+}
+
+main {
+  padding: 3.8rem 4rem 4rem;
+}
+
+/* Hero */
+.hero {
+  color: #fff;
+  text-align: center;
+}
+.hero__logo {
+  margin-bottom: 7rem;
+}
+.hero__img {
+  width: 100%;
+  max-width: 70rem;
+  margin-bottom: 6rem;
+  margin-inline: auto;
+}
+.hero__heading {
+  font-size: clamp(2.4rem, 1.5rem + 1.8vw, 4rem);
+
+  width: 80%;
+  margin-inline: auto;
+  line-height: 3.6rem;
+  margin-bottom: 1.6rem;
+}
+.hero__text {
+  font-size: 1.6rem;
+  line-height: 2.4rem;
+  width: 80%;
+  margin-inline: auto;
+  margin-bottom: 2.4rem;
+}
+.hero__button {
+  padding: 1rem 8rem;
+  background: hsl(0, 0%, 100%);
+  color: var(--violet);
+  border-radius: 20px;
+  border: none;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
+  transition: background 0.2s ease-in;
+}
+.hero__button:hover {
+  background: hsl(0, 0%, 90%);
+}
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 4rem;
+}
+.footer__list {
+  display: flex;
+  align-items: center;
+  list-style: none;
+}
+.footer__item {
+  margin-right: 1.5rem;
+}
+.footer__icon {
+  color: #fff;
+  font-size: 1.5rem;
+  border: 1px solid #fff;
+  border-radius: 50%;
+  padding: 0.6rem 1.1rem;
+}
+
+.footer__icon:hover {
+  background: #fff;
+  color: var(--violet);
 }
