--- a/2-junior-projects/01-newsletter-signup-form/style.css
+++ b/2-junior-projects/01-newsletter-signup-form/style.css
@@ -21,10 +21,11 @@ html {
 body {
   font-size: 1.6rem;
   font-family: 'Roboto', sans-serif;
+  background: var(--charcoal-grey);
 }
 
 img {
   max-width: 100%;
-  height:auto;
-  display:block;
+  height: auto;
+  display: block;
 }
